# pycoco

./: .editorconfig  .gitignore  .travis.yml  CharClass.py  CoCoPy.srctrlprj  Coco.py  CodeGenerator.py  Core.py  DriverGen.py  Errors.py  MANIFEST.in  PKG-INFO  Parser.py  ParserGen.py  README  README.txt  ReadMe.md  Scanner.py  Trace.py  pyproject.toml  setup.cfg  setup.py  setupInfo.py
CoCoRuntime/: errors.py  parser.py  scanner.py
Coco/: CLI.py  CharClass.py  CodeGenerator.py  Core.py  DFA.py  DriverGen.py  Errors.py  Parser.py  ParserGen.py  Preamble.py  Scanner.py  ScannerGen.py  Tab.py  Trace.py  __main__.py  actions.py  changelog.json  charUtils.py  controller.py  defaults.py  nodes.py  setupInfo.py  symbols.py
Coco/frames/: Driver.frame  Parser.frame  Scanner.frame
Coco/utils/: __init__.py
documentation/: CocoDoc.htm  howToBootstrapManually.txt  pimaker.txt
examples/: ADACS.atg  AdaCS.atg  C.ATG  C.atg  CALC.ATG  CDECL1.ATG  CDECL1.atg  CDECL2.ATG  CDECL3.atg  CDecl1.atg  CDecl2.atg  CDecl3.atg  CLANG1.atg  CLANG2.atg  Clang1.atg  Clang2.atg  EXPR.ATG  EXPR.atg  Expr.atg  Expr.frame  MICROADA.atg  MOD2.ATG  MOD2.atg  MicroAda.atg  Mod2.atg  OBERON.ATG  OBERON.atg  Oberon.atg  PASCAL.ATG  PASCAL.atg  PIMMOD2.ATG  PIMMOD2.atg  PIMMod2.atg  PRETTY.atg  Pascal.atg  Pascal2.atg  Pretty.atg  TASTE.atg  Taste.atg  UMBRIEL1.ATG  (+5 more)
examples/Calc/: CALC.INP  CALC.atg  Calc.atg  Calc.inp
frames/: Driver.frame  Parser.frame
pimaker/: makepi.how  pimaker.atg  pimaker.frame  pimakerlib.py
sources/: Coco.atg  Coco.frame  Parser.frame  Scanner.frame  __main__.frame
testSuite/: TestAlts.atg  TestAlts_Parser.py  TestAlts_Scanner.py  TestAlts_Trace.txt  TestAlts_output.txt  TestAny.atg  TestAny1.atg  TestAny1_Output.txt  TestAny1_Parser.py  TestAny1_Scanner.py  TestAny1_Trace.txt  TestAny_Parser.py  TestAny_Scanner.py  TestAny_Trace.txt  TestCasing.atg  TestCasing_Parser.py  TestCasing_Scanner.py  TestCasing_Trace.txt  TestChars.ATG  TestChars.atg  TestChars_Scanner.py  TestChars_Trace.txt  TestCircular.atg  TestCircular_Output.txt  TestCircular_Trace.txt  TestComments.ATG  TestComments.atg  TestComments_Parser.py  TestComments_Scanner.py  TestComments_Trace.txt  TestComplete.atg  TestComplete_Output.txt  TestComplete_Trace.txt  TestDel.ATG  TestDel_Output.txt  TestDel_Parser.py  TestDel_Trace.txt  TestEps.atg  TestEps_Parser.py  TestEps_Scanner.py  (+55 more)
testSuite/tests/TestAlts/: Test.atg
testSuite/tests/TestAny/: Parser.py  Test.atg
testSuite/tests/TestAny1/: Parser.py  Test.atg
testSuite/tests/TestCasing/: Parser.py  Test.atg  Trace.txt
testSuite/tests/TestChars/: Scanner.py
testSuite/tests/TestCircular/: Test.atg
testSuite/tests/TestComments/: Parser.py  Scanner.py
testSuite/tests/TestComplete/: Output.txt
testSuite/tests/TestDel/: Test.atg  Trace.txt
testSuite/tests/TestEps/: Parser.py  Test.atg
testSuite/tests/TestIters/: Parser.py
testSuite/tests/TestLL1/: Parser.py  Scanner.py  Trace.txt
testSuite/tests/TestOpts/: Scanner.py  Test.atg
testSuite/tests/TestOpts1/: Parser.py
testSuite/tests/TestReached/: Test.atg
testSuite/tests/TestResIllegal/: Output.txt
testSuite/tests/TestResOK/: Parser.py  Scanner.py
testSuite/tests/TestSem/: Output.txt  Parser.py  Scanner.py  Test.atg
testSuite/tests/TestSem-orig/: Test.atg
testSuite/tests/TestSync/: Parser.py
testSuite/tests/TestTerminalizable/: Trace.txt
testSuite/tests/TestTokens/: Parser.py  Scanner.py
testSuite/tests/TestTokens1/: Output.txt
testSuite/tests/TestWeak/: Parser.py
tests/: util.py
(+48 files in other folders)
