[metadata]
name = CocoPy
author = Ron Longo
author_email = ron.longo@cox.net
url = http://www.ssw.uni-linz.ac.at/coco
description = Python implementation of the famous CoCo/R LL(k) compiler generator.
long_description = file: ReadMe.md
keywords = parser, generator
license = GPL-3.0
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License (GPL)
	Natural Language :: English
	Programming Language :: Python
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Human Machine Interfaces
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
	Topic :: Software Development :: Code Generators
	Topic :: Software Development :: Compilers
	Topic :: Software Development :: Interpreters
	Topic :: Software Development :: Pre-processors
	Topic :: System :: Shells
	Topic :: Text Processing :: General
	Topic :: Text Processing :: Linguistic

[options]
python_requires = >=3.4
zip_safe = True
install_requires =
	astor
packages = Coco, CoCoRuntime
include_package_data = True
setup_requires = setuptools_scm;
test_suite = testSuite.__main__

[options.package_data]
documentation = *
examples = *
frames = *
pimaker = *
sources = *
testSuite = *
